[metadata]
name = improver
author = "Met Office"
author_email = improver@??
url=https://improver.readthedocs.io/en/latest/
description = A library of algorithms for meteorological post-processing
    and verification.
keywords =
    python
    meteorology
    weather
license = BSD
license_file = COPYING
platforms = any
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Atmospheric Science
python_requires = >=3.7
setup_requires=pytest-runner==4.4

[aliases]
test = pytest